# blog

./: 404.html  README.md  ZENSICAL_EVALUATION.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  hello.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: deploy.yml
about/: index.html
archive/2020/: index.html
archive/2022/: index.html
archive/2025/: index.html
archive/2026/: index.html
blog/: about.md
blog/posts/: 2026-01-23-python-minimal-boilerplate-pug14.md  first-post.md
blog/posts/2020-01-28-Altair/: index.md
blog/posts/2020-01-29-bullet-chart-altair/: index.md
blog/posts/2020-02-15-breakins/: index.md
blog/posts/2020-02-20-test/: index.md
blog/posts/2020-04-18-first-test/: index.md
blog/posts/2020-04-19-deads-last-ten-year-vs-covid/: index.md
blog/posts/2020-04-22-regional-covid19-mortality-belgium/: index.md
blog/posts/2020-04-24-talk-datascience-leuven-explain-clustering/: index.md
blog/posts/2020-11-01-rt-be-region/: index.md
blog/posts/2020-11-05-RKI-rte-calculation/: index.md
blog/posts/2022-04-18-Economist-style/: index.md
blog/posts/2022-04-24-FT-barchart-altair/: index.md
blog/posts/2026-07-13-reducing-python-supply-chain-risk/: index.md
blog/posts/test/: index.md
category/hello/: index.html
category/world/: index.html
docs/: index.md
docs/posts/: first-post.md
overrides/partials/: comments.html
page/2/: index.html
search/: search_index.json
src/blog/: mkdocs.yml  views.py
tags/: index.html
templates/: editor.html
(+36 files in other folders)
