[project]
name = "blog"
version = "0"
description = "Blog of cast42"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "mkdocs>=1.6.1",
    "fastapi",
    "granian",
    "stamina",
    "mkdocs-rss-plugin>=1.17.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.8",
]

[dependency-groups]
dev = ["fastapi[standard]", "pytest"]
